<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/crop"
        android:icon="@drawable/ic_baseline_crop_24"
        android:title="@string/crop"
        android:visible="true" />
    <item
        android:id="@+id/text"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_sort_by_alpha_24"
        android:title="@string/text"
        android:visible="true" />
    <item
        android:id="@+id/emoji"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_emoji_emotions_24"
        android:title="@string/emoji"
        android:visible="true" />
    <item
        android:id="@+id/paint"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_format_paint_24"
        android:title="@string/paint"
        android:visible="true" />
</menu>