<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/share"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="#FFFFFF"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        app:srcCompat="@drawable/share" />

    <TextView
        android:id="@+id/textview01"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:text="@string/share"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/rate_us"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="#FFFFFF"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        app:srcCompat="@drawable/rate_us" />

    <TextView
        android:id="@+id/textview02"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:text="@string/rate_us"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toEndOf="@+id/textview01"
        app:layout_constraintTop_toBottomOf="@+id/rate_us"
        app:layout_constraintVertical_bias="0.019" />

    <ImageView
        android:id="@+id/about_us"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="#FFFFFF"
        android:onClick="Rate_us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toEndOf="@+id/rate_us"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        app:srcCompat="@drawable/about_us"
        android:focusable="true" />

    <TextView
        android:id="@+id/textview03"
        android:layout_width="114dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:text="@string/about_us"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toEndOf="@+id/textview02"
        app:layout_constraintTop_toBottomOf="@+id/about_us"
        app:layout_constraintVertical_bias="0.019" />

</androidx.constraintlayout.widget.ConstraintLayout>